--- a/AppRPG/AppRPG/MainWindow.axaml
+++ b/AppRPG/AppRPG/MainWindow.axaml
@@ -5,5 +5,5 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AppRPG.MainWindow"
         Title="AppRPG">
-    
+    <Grid Name="RootPanel"></Grid>
 </Window>
