--- a/AppRPG/AppRPG/PageAjoutPerso.axaml
+++ b/AppRPG/AppRPG/PageAjoutPerso.axaml
@@ -5,6 +5,6 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="AppRPG.PageAjoutPerso">
     <Grid Name="PageAjoutDuPerso"  Column="0" RowDefinitions="*">
-        <Button Name="BoutonAjoutPerso"  HorizontalAlignment="Center" VerticalAlignment="Center">bouton</Button>
+        <Button Name="BoutonAjoutPerso"  HorizontalAlignment="Center" VerticalAlignment="Center" Click="BoutonAjoutPerso_OnClick" >bouton</Button>
     </Grid>
 </UserControl>
